--- a/angular.json
+++ b/angular.json
@@ -106,23 +106,23 @@
         }
       }
     },
-    "fintech": {
+    "cloud-airlines-angular-sdk": {
       "projectType": "library",
-      "root": "projects/fintech",
-      "sourceRoot": "projects/fintech/src",
+      "root": "projects/cloud-airlines-angular-sdk",
+      "sourceRoot": "projects/cloud-airlines-angular-sdk/src",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "project": "projects/fintech/ng-package.json"
+            "project": "projects/cloud-airlines-angular-sdk/ng-package.json"
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/fintech/tsconfig.lib.prod.json"
+              "tsConfig": "projects/cloud-airlines-angular-sdk/tsconfig.lib.prod.json"
             },
             "development": {
-              "tsConfig": "projects/fintech/tsconfig.lib.json"
+              "tsConfig": "projects/cloud-airlines-angular-sdk/tsconfig.lib.json"
             }
           },
           "defaultConfiguration": "production"
@@ -130,9 +130,9 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/fintech/src/test.ts",
-            "tsConfig": "projects/fintech/tsconfig.spec.json",
-            "karmaConfig": "projects/fintech/karma.conf.js"
+            "main": "projects/cloud-airlines-angular-sdk/src/test.ts",
+            "tsConfig": "projects/cloud-airlines-angular-sdk/tsconfig.spec.json",
+            "karmaConfig": "projects/cloud-airlines-angular-sdk/karma.conf.js"
           }
         }
       }
