--- a/projects/cloud-airlines-angular-sdk/package.json
+++ b/projects/cloud-airlines-angular-sdk/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hopper/fintech",
-  "version": "0.0.3",
+  "name": "@hopper/cloud-airlines-angular-sdk",
+  "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0",
