--- a/projects/cloud-airlines-angular-sdk/package.json
+++ b/projects/cloud-airlines-angular-sdk/package.json
@@ -5,9 +5,11 @@
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0",
     "@angular/material": "^12.2.13",
+    "@angular/material-moment-adapter": "^12.2.13",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/flex-layout": "^12.0.0-beta.35",
+    "@ngx-translate/core": "^13.0.0",
     "rxjs": "~6.6.0"
   },
   "dependencies": {
