--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jasmine": "~3.8.0",
     "@types/lodash": "^4.14.182",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
