--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./projects/cloud-airlines-angular-sdk/assets",
+                "output": "/assets/"
+              }
             ],
             "styles": [
               "src/styles.scss"
@@ -85,24 +90,6 @@
           "options": {
             "browserTarget": "hc-airlines-angular:build"
           }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": []
-          }
         }
       }
     },
@@ -126,14 +113,6 @@
             }
           },
           "defaultConfiguration": "production"
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/cloud-airlines-angular-sdk/src/test.ts",
-            "tsConfig": "projects/cloud-airlines-angular-sdk/tsconfig.spec.json",
-            "karmaConfig": "projects/cloud-airlines-angular-sdk/karma.conf.js"
-          }
         }
       }
     }
