--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,8 +14,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm ci
-      - run: npm test
+      - run: npm install
 
   publish-npm:
     needs: build
@@ -26,7 +25,10 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm publish
+      - run: npm install
+      - run: ng build "cloud-airlines-angular-sdk"
+      - run: |
+          cd dist/cloud-airlines-angular-sdk
+          npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
