--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,6 +27,7 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
       #- run: npm install
+      - run: npm install @angular/cli@12.2.17
       - run: ng build "cloud-airlines-angular-sdk"
       - run: |
           cd dist/cloud-airlines-angular-sdk
