--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
-name: Node.js Package
+name: Angular SDK Publication
 
 on:
   workflow_dispatch
@@ -26,8 +26,8 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      #- run: npm install
-      - run: npm install @angular/cli@12.2.17
+      - run: npm install
+      - run: npm install -g @angular/cli@12.2.17
       - run: ng build "cloud-airlines-angular-sdk"
       - run: |
           cd dist/cloud-airlines-angular-sdk
