--- a/.github/workflows/npm-publish-beta.yml
+++ b/.github/workflows/npm-publish-beta.yml
@@ -7,18 +7,7 @@ on:
   workflow_dispatch
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - run: npm install
-      - run: npm install -g @angular/cli@12.2.17
-
-  publish-npm:
-    needs: build
+  publish-to-npm:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -26,11 +15,12 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: npm install
       - run: npm install -g @angular/cli@12.2.17
+      - run: npm install
       - run: ng build "angular-sdk"
       - run: |
           cd dist/angular-sdk
+          npm dist-tag rm @hopper-cloud-airlines/angular-sdk beta
           npm publish --access public --tag beta
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
