--- a/projects/angular-sdk/package.json
+++ b/projects/angular-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hopper-cloud-airlines/angular-sdk",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "peerDependencies": {
     "@angular/common": "^11.2.14",
     "@angular/core": "^11.2.14",
@@ -18,5 +18,6 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:hopper/hc-airlines-angular.git"
-  }
+  },
+  "private": false
 }
