--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -18,7 +18,8 @@ jobs:
       - run: npm install -g @angular/cli@11.2.14
       - run: npm install
       - run: ng build "angular-sdk"
-      - run: cd dist/angular-sdk
-      - run: npm publish --access public
+      - run: |
+          cd dist/angular-sdk
+          npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
