--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,9 +13,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 12.11.1
+          node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: npm install -g @angular/cli@11.2.14
+      - run: npm install -g @angular/cli
       - run: npm install
       - run: ng build "angular-sdk"
       - run: |
