--- a/package.json
+++ b/package.json
@@ -8,43 +8,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/cdk": "^12.2.13",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/flex-layout": "^12.0.0-beta.35",
-    "@angular/forms": "~12.2.0",
-    "@angular/material": "^12.2.13",
-    "@angular/material-moment-adapter": "^12.2.13",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "@ngrx/router-store": "^12.5.1",
-    "@ngrx/store": "^12.5.1",
-    "@ngrx/store-devtools": "^12.5.1",
+    "@angular/animations": "~11.2.14",
+    "@angular/cdk": "~11.2.13",
+    "@angular/common": "~11.2.14",
+    "@angular/compiler": "~11.2.14",
+    "@angular/core": "~11.2.14",
+    "@angular/flex-layout": "~11.0.0-beta.33",
+    "@angular/forms": "~11.2.14",
+    "@angular/material": "~11.2.13",
+    "@angular/material-moment-adapter": "~11.2.13",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/router": "~11.2.14",
+    "@ngrx/router-store": "^11.1.1",
+    "@ngrx/store": "^11.1.1",
+    "@ngrx/store-devtools": "^11.1.1",
     "@ngx-translate/core": "^13.0.0",
     "ngrx-store-freeze": "^0.2.4",
-    "ngx-highlightjs": "^5.0.0",
+    "ngx-highlightjs": "^4.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.16",
-    "@angular/cli": "~12.2.16",
-    "@angular/compiler-cli": "~12.2.0",
-    "@types/jasmine": "~3.8.0",
+    "@angular-devkit/build-angular": "~0.1102.13",
+    "@angular/cli": "~11.2.14",
+    "@angular/compiler-cli": "~11.2.14",
+    "@types/highlight.js": "^10.1.0",
+    "@types/jasmine": "~3.6.0",
     "@types/lodash": "^4.14.182",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^1.0.0",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "jasmine-core": "~3.6.0",
+    "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^12.1.1",
-    "typescript": "~4.3.5"
+    "karma-jasmine-html-reporter": "~1.5.0",
+    "ng-packagr": "^11.2.4",
+    "typescript": "~4.1.5"
   }
 }
