--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build"
   },
   "private": true,
+  "license": "Apache-2.0",
   "dependencies": {
     "@angular/animations": "~11.2.14",
     "@angular/cdk": "~11.2.13",
