--- a/projects/angular-sdk/package.json
+++ b/projects/angular-sdk/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@hopper-cloud-airlines/angular-sdk",
-  "version": "2.1.6",
+  "version": "2.1.7",
+  "license": "Apache-2.0",
+  "author": {
+    "name": "Hopper Cloud Airlines Team",
+    "url": "https://cloud.hopper.com/"
+  },
   "peerDependencies": {
     "@angular/common": ">=11.2.14",
     "@angular/cdk": ">=11.2.13",
