--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@ngrx/store-devtools": "^11.1.1",
     "@ngx-translate/core": "^13.0.0",
     "ngrx-store-freeze": "^0.2.4",
-    "ngx-highlightjs": "^4.1.3",
+    "ngx-highlight-js": "^11.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.13",
