--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@angular/animations": "~12.2.16",
-    "@angular/cdk": "~11.2.13",
+    "@angular/cdk": "~12.2.13",
     "@angular/common": "~12.2.16",
     "@angular/compiler": "~12.2.16",
     "@angular/core": "~12.2.16",
-    "@angular/flex-layout": "~11.0.0-beta.33",
+    "@angular/flex-layout": "~12.0.0-beta.35",
     "@angular/forms": "~12.2.16",
     "@angular/material": "~11.2.13",
     "@angular/material-moment-adapter": "~11.2.13",
     "@angular/platform-browser": "~12.2.16",
     "@angular/platform-browser-dynamic": "~12.2.16",
     "@angular/router": "~12.2.16",
-    "@ngrx/router-store": "^11.1.1",
-    "@ngrx/store": "^11.1.1",
-    "@ngrx/store-devtools": "^11.1.1",
+    "@ngrx/router-store": "~12.5.1",
+    "@ngrx/store": "~12.5.1",
+    "@ngrx/store-devtools": "~12.5.1",
     "@ngx-translate/core": "^13.0.0",
     "ngrx-store-freeze": "^0.2.4",
     "ngx-highlight-js": "^11.1.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "~7.0.1",
     "tslib": "^2.3.0",
     "zone.js": "0.11.6"
   },
