--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store": "~12.5.1",
     "@ngrx/store-devtools": "~12.5.1",
     "@ngx-translate/core": "^13.0.0",
+    "moment": "^2.29.4",
     "ngrx-store-freeze": "^0.2.4",
     "ngx-highlight-js": "^11.1.0",
     "rxjs": "~7.0.1",
