--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.5.0",
     "ng-packagr": "^12.2.7",
-    "typescript": "^4.3.5"
+    "typescript": "4.3.5"
   }
 }
