--- a/projects/angular-sdk/tsconfig.lib.prod.json
+++ b/projects/angular-sdk/tsconfig.lib.prod.json
@@ -2,9 +2,13 @@
 {
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
-    "declarationMap": false
+    "declarationMap": false,
+    "removeComments": true
   },
   "angularCompilerOptions": {
-    "compilationMode": "partial"
+    "compilationMode": "partial",
+    "preserveWhitespaces": "false",
+    "enableResourceInlining": "true",
+    "generateCodeForLibraries": "true",
   }
 }
