--- a/projects/angular-sdk/package.json
+++ b/projects/angular-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hopper-cloud-airlines/angular-sdk",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "license": "Apache-2.0",
   "author": {
     "name": "Hopper Cloud Airlines Team",
@@ -13,7 +13,7 @@
     "@angular/material": ">=14.2.7",
     "@angular/material-moment-adapter": ">=14.2.7",
     "@angular/platform-browser": ">=14.3.0",
-    "@angular/platform-browser-dynamic": ">=^14.3.0",
+    "@angular/platform-browser-dynamic": ">=14.3.0",
     "@angular/flex-layout": ">=14.0.0-beta.41",
     "@ngx-translate/core": ">=14.0.0",
     "rxjs": ">=7.5.6"
