--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,8 @@
       "es2018",
       "dom"
     ],
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
