--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
+    "@datadog/browser-logs": "^5.5.0",
     "@ngrx/router-store": "~15.4.0",
     "@ngrx/store": "~15.4.0",
     "@ngrx/store-devtools": "~15.4.0",
