--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,7 +4,16 @@
 name: Publish new npm version
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'The tag to publish'
+        required: true
+        default: 'latest'
+        type: choice
+        options:
+          - 'latest'
+          - 'next'
 
 jobs:
   publish-to-npm:
@@ -13,13 +22,14 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.10.0
+          node-version:  18.10.0
           registry-url: https://registry.npmjs.org/
       - run: npm install -g @angular/cli@15.2.10
       - run: npm install
       - run: ng build "angular-sdk"
       - run: |
           cd dist/angular-sdk
-          npm publish --access public
+          npm publish --access public --tag ${{ env.TAG }}
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          TAG: ${{ github.event.inputs.tag }}
