feat: add prettier and format

--- a/projects/angular-sdk/tsconfig.lib.prod.json
+++ b/projects/angular-sdk/tsconfig.lib.prod.json
@@ -9,6 +9,6 @@
     "compilationMode": "partial",
     "preserveWhitespaces": "false",
     "enableResourceInlining": "true",
-    "generateCodeForLibraries": "true",
+    "generateCodeForLibraries": "true"
   }
 }
