--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.5.0",
     "ng-packagr": "^15.2.2",
+    "prettier": "^3.2.5",
     "typescript": "4.9.5"
   }
 }
