--- a/projects/angular-sdk/package.json
+++ b/projects/angular-sdk/package.json
@@ -6,6 +6,7 @@
     "name": "HTS - Airlines Team",
     "url": "https://hts.hopper.com/"
   },
+  "packageManager": "pnpm@8.15.4",
   "peerDependencies": {
     "@angular/common": ">=15.2.9",
     "@angular/cdk": ">=15.2.9",
@@ -24,5 +25,8 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:hopper/hc-airlines-angular.git"
+  },
+  "engines": {
+    "node": ">=18 <20"
   }
 }
