--- a/.github/workflows/i18n-validation.yml
+++ b/.github/workflows/i18n-validation.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   i18n-validation:
-    runs-on: gh-runner-small
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
