--- a/projects/angular-sdk/package.json
+++ b/projects/angular-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hopper-cloud-airlines/angular-sdk",
-  "version": "6.2.O",
+  "version": "6.2.0",
   "license": "Apache-2.0",
   "author": {
     "name": "HTS - Airlines Team",
