--- a/projects/angular-sdk/package.json
+++ b/projects/angular-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hopper-cloud-airlines/angular-sdk",
-  "version": "6.3.0",
+  "version": "6.3.1",
   "license": "Apache-2.0",
   "author": {
     "name": "HTS - Airlines Team",
@@ -17,6 +17,7 @@
     "@angular/platform-browser-dynamic": ">=15.2.9",
     "@angular/flex-layout": ">=15.0.0-beta.42",
     "@ngx-translate/core": ">=14.0.0",
+    "@datadog/browser-logs": ">=5.5.0",
     "rxjs": ">=7.5.6"
   },
   "dependencies": {
