--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.9",
     "@angular/material": "^15.2.9",
-    "@angular/material-moment-adapter": "^15.2.9",
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
@@ -28,6 +27,7 @@
     "@ngrx/store": "~15.4.0",
     "@ngrx/store-devtools": "~15.4.0",
     "@ngx-translate/core": "^14.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "ngrx-store-freeze": "^0.2.4",
     "ngx-highlight-js": "^13.0.0",
